# OKX_Trading-Bot

./: .env.example  .gitignore  README.md  create_user.py  dashboard.py  deploy.sh  main.py  pyproject.toml  run_all.sh  run_api.sh  run_frontend.sh  trade_state.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Layout.jsx
frontend/src/context/: AuthContext.jsx  ThemeContext.jsx
frontend/src/pages/: Dashboard.jsx  Login.jsx
src/: api.py
src/application/: bot.py
src/config/: settings.py
src/domain/analysis/: ai_scanner.py  market.py
src/infrastructure/exchange/: client.py
src/infrastructure/notification/: discord.py  telegram_bot.py
src/infrastructure/persistence/: postgres_repo.py  state.py
src/interfaces/api/: auth.py  routes.py
